--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "update_url": "https://clients2.google.com/service/update2/crx",
-    "name": "Sistrix Visibility and Metrics Check",
+    "name": "Sistrix Visibility and Metrics Checker",
     "short_name": "Sistrix Checker",
-    "description": "Check active tab's domain for Sistrix visibility. Single-click access to country-based Sistrix metrics. For Sistrix clients only.",
+    "description": "On-the-fly check of Sistrix mobile visibility. Single-click access to country-based Sistrix metrics. Works only for Sistrix clients.",
     "author": "Evgeniy Orlov of mediaworx berlin AG",
     "homepage_url": "https://www.linkedin.com/in/evgeniyorlov/",
     "version": "1.0",
@@ -17,16 +17,13 @@
         "open_in_tab": false
     },
     "permissions": [
-        "webNavigation",
-        "activeTab",
         "tabs",
-        "http://*/*",
-        "https://*/*",
+        "https://*.sistrix.com/*",
         "storage",
         "background"
     ],
     "browser_action": {
-        "default_title": "Sistrix visibility and metrics checker",
+        "default_title": "Sistrix Visibility and Metrics Checker",
         "default_icon": {
             "19": "icon19.png",
             "38": "icon38.png"
